2006-10-27  Jacob Smullyan  <smulloni@smullyan.org>

	* src/skunk/util/timeconvert.py (convert): convert now processes
	lists and tuples correctly recursively.

2005-10-25  Jacob Smullyan  <smulloni@smullyan.org>

	* src/skunk/cache/base.py (Cache.call): changing signature of
	ondefer, so that the deferral callback can return the original
	entry if it wants.

2005-10-24  Jacob Smullyan  <smulloni@smullyan.org>

	* src/skunk/net/server/processmgr.py: deal with file descriptors
	and call os._exit rather than sys.exit.

	* src/skunk/cache/diskCache.py (DiskCache.invalidate): fix for
	when cache item isn't in the cache.
